# timogr

./: .gitignore  README.md  build.gradle  debug.sh  keystore.properties.example  pull_tigr.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jniglue.h  log.h  main.c  main.cpp  tigractivity.cpp  tigrglue.cpp  tigrglue.h
app/src/main/java/com/sedgelake/timogr/: TimogrActivity.java
app/src/main/java/timogr/app/: TimogrActivity.java
app/src/main/java/timogr/demo/: TimogrActivity.java
app/src/main/res/values/: strings.xml
dbgtool/: adb.go  go.mod  jdwp.go  main.go  sdk.go
